# runner

./: .dprint.json  .dprint.jsonc  .gitattributes  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  action.mjs  action.yml  bacon.toml  build.rs  cliff.toml  install.ps1  install.sh  justfile  package.json  pyproject.toml  release-plz.toml  rust-toolchain.toml  tombi.toml  tsconfig.json  verify-branch-state.sh
.cargo/: config.toml
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml
.github/actions/build-target/: action.yml  pack.sh
.github/actions/dist-artifact/: action.yml
.github/actions/pack-npm-facade/: action.yml  pack.sh
.github/actions/pack-npm-platform/: action.yml  pack.sh
.github/actions/pack-wheel/: action.yml
.github/scripts/: aur.sh  npm.sh  release.sh
.github/scripts/action/: add-path.sh  install-binstall.sh  install-runner.sh  resolve.sh
.github/scripts/publish/: apt-repo.sh  aur-prepare.sh  aur.mjs  freebsd-prepare.sh  npm.mjs  npm.sh  smoke-npm-artifact.sh
.github/scripts/release/: notes.mjs  publish.mjs
.github/workflows/: aur-release.yml  ci.yml  crates-release.yml  debian-release.yml  freebsd-release.yml  npm-release.yml  pages.yml  release-dryrun.yml  release-plz.yml  release.yml
.zed/: settings.json
aur/: README.md
aur/runner-run/: PKGBUILD
aur/runner-run-bin/: PKGBUILD
debian/: README.md  control.in  copyright  lintian-overrides
docs/superpowers/plans/: 2026-03-29-completion-polish.md  2026-05-13-task-chaining.md
docs/superpowers/specs/: 2026-05-13-task-chaining-design.md  2026-05-19-site-sveltekit-rewrite-design.md
examples/: gen-man.rs  gen-schema.rs
freebsd/: README.md
freebsd/runner/: Makefile  distinfo  pkg-descr
man/: run.1  runner-clean.1  runner-completions.1  runner-doctor.1  runner-install.1  runner-list.1  runner-run.1  runner-why.1  runner.1
npm/: targets.json  targets.schema.json
npm/facade/: README.md  package.json
npm/facade/lib/: launch.cjs  resolve.cjs  resolve.js
npm/platform/: launcher.cjs  runner.cjs
npm/scripts/: build-packages.mjs  build-packages.ts  publish.mjs  publish.ts
schemas/: doctor.example.json  doctor.schema.json  doctor.v1.example.json  doctor.v1.schema.json  doctor.v2.example.json  doctor.v2.schema.json  doctor.v3-draft.schema.json  doctor.v3.example.json  doctor.v3.schema.json  list.example.json  list.schema.json  list.v1.example.json  list.v1.schema.json  list.v2.example.json  list.v2.schema.json  runner.init.toml  runner.toml.schema.json  why.example.json  why.schema.json  why.v1.example.json  why.v1.schema.json  why.v2.example.json  why.v2.schema.json  why.v3-draft.example.json  why.v3.example.json  why.v3.schema.json
site/: .dprint.json  .gitignore  DISCOVERIES.md  README.md  _headers  biome.json  build.ts  dev.ts  eslint.config.js  package.json  svelte.config.js  tsconfig.json  vite.config.ts  wrangler.jsonc
site/public/: 404.html  _headers  index.html
site/scripts/: gen-site-data.ts  site-data.test.ts  site-data.ts  tsconfig.json
site/src/: 404.html  app.css  app.html  index.html  prerender.test.ts
site/src/app/: copy.ts
site/src/lib/: announce.svelte.ts  changelog.test.ts  changelog.ts
site/src/lib/components/: CopyButton.svelte  InlineMd.svelte
site/src/lib/content/: site.test.ts  site.ts
site/src/lib/sections/: Completion.svelte  Demo.svelte  Install.svelte  SiteFooter.svelte  Speaks.svelte  Why.svelte  Wordmark.svelte
site/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
site/src/routes/changelog/: +page.server.ts  +page.svelte
site/src/routes/completion/: +page.svelte
site/src/routes/demo/: +page.svelte
site/src/routes/why/: +page.svelte
site/src/styles/: 404.css  base.css  index.css
src/: cli.rs  complete.rs  config.rs  detect.rs  exec.rs  lib.rs  main.rs  man.rs  report.rs  types.rs
src/chain/: exec.rs  mod.rs  mux.rs  parse.rs
src/cmd/: clean.rs  completions.rs  config.rs  doctor.rs  exec.rs  info.rs  install.rs  list.rs  man.rs  mod.rs  run.rs  schema.rs  why.rs
src/cmd/lsp/: analysis.rs  diagnostics.rs  mod.rs  schema_index.rs  text.rs
src/cmd/run/: dispatch.rs  local_dep.rs  local_file.rs  qualify.rs  runtime.rs  select.rs
src/complete/: grouped.zsh  mod.rs
src/resolver/: error.rs  mod.rs  overrides.rs  policies.rs  probe.rs  resolve.rs  types.rs
src/schema/: doctor.rs  doctor_v3.rs  labels.rs  mod.rs  project.rs  v1.rs  v2.rs  v3.rs
src/tool/: bacon.rs  bun.rs  bundler.rs  cargo_aliases.rs  cargo_pm.rs  composer.rs  deno.rs  deno_exec.rs  files.rs  git.rs  go_pm.rs  go_task.rs  just.rs  make.rs  mise.rs  mod.rs  node.rs  npm.rs  nx.rs  passthrough.rs  pipenv.rs  pnpm.rs  poetry.rs  program.rs  python.rs  shell.rs  test_support.rs  turbo.rs  uv.rs  volta.rs  yarn.rs
tests/: builtin_verb_dispatch.rs  chain_integration.rs  doctor_env.rs  info_deprecation.rs  install_collision.rs  nested_dispatch.rs  nested_warnings.rs  quiet_dispatch.rs  runtime_override.rs
tests/docker/: README.md  musl-resolve.Dockerfile
tests/fixtures/chain-parallel-fail/: justfile  runner.toml
tests/fixtures/chain-sequential/: justfile
tests/fixtures/github-no-group/: justfile  runner.toml
tests/fixtures/info-shadowed/: justfile
tests/fixtures/list-shadowed/: justfile
tests/fixtures/parallel-grouped/: justfile  runner.toml
