[package]
name        = "runner"
version     = "0.1.0"
edition     = "2024"
description = "Universal project task runner"
readme      = "README.md"
homepage    = "https://github.com/kjanat/runner/#readme"
repository  = "https://github.com/kjanat/runner/"
license     = "MIT"
keywords    = ["automation", "build-tool", "cli", "task-runner"]
categories  = ["command-line-utilities", "development-tools"]
default-run = "runner"
autobins    = false

[[bin]]
name = "runner"
path = "src/main.rs"

[[bin]]
name              = "run"
path              = "src/bin/run.rs"
required-features = ["run-alias"]

[dependencies.anyhow]
version = "1"

[dependencies.clap]
version  = "4"
features = ["derive", "string"]

[dependencies.clap_complete]
version  = "4"
features = ["unstable-dynamic"]

[dependencies.colored]
version = "3"

[dependencies.json5]
version = "1"

[dependencies.serde]
version  = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.yaml-rust2]
version = "0.11"

[features]
default   = ["run-alias"]
run-alias = []

[lints.clippy]
cargo_common_metadata = "allow"
redundant_pub_crate   = "allow"

[lints.clippy.all]
level    = "deny"
priority = -1

[lints.clippy.cargo]
level    = "warn"
priority = -1

[lints.clippy.complexity]
level    = "warn"
priority = -1

[lints.clippy.correctness]
level    = "deny"
priority = -1

[lints.clippy.nursery]
level    = "warn"
priority = -1

[lints.clippy.pedantic]
level    = "warn"
priority = -1

[lints.clippy.perf]
level    = "warn"
priority = -1

[lints.clippy.style]
level    = "warn"
priority = -1

[lints.clippy.suspicious]
level    = "warn"
priority = -1

[lints.rust]
elided_lifetimes_in_paths = "warn"
missing_docs              = "warn"
trivial_numeric_casts     = "warn"
unnameable_types          = "warn"
unreachable_pub           = "warn"
unsafe_code               = "deny"
unused_import_braces      = "warn"
unused_lifetimes          = "warn"
unused_qualifications     = "warn"

[lints.rustdoc]
bare_urls                    = "deny"
broken_intra_doc_links       = "deny"
invalid_codeblock_attributes = "deny"
invalid_html_tags            = "deny"
invalid_rust_codeblocks      = "deny"
private_intra_doc_links      = "deny"
redundant_explicit_links     = "warn"
unescaped_backticks          = "warn"

[profile.release]
strip = true
lto   = true
