[project]
name            = "runner-run"
version         = "0.8.0"
description     = "Universal project task runner"
readme          = "README.md"
requires-python = ">=3.9"
license         = { text = "MIT" }
authors         = [{ name = "Kaj Kowalski", email = "info+runner@kajkowalski.nl" }]
keywords        = ["automation", "build-tool", "cli", "task-runner"]
classifiers     = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage   = "https://runner.kjanat.dev"
Issues     = "https://github.com/kjanat/runner/issues"
Repository = "https://github.com/kjanat/runner"

[build-system]
requires      = ["maturin>=1.11,<2"]
build-backend = "maturin"

[tool.maturin]
bindings      = "bin"
manifest-path = "Cargo.toml"
strip         = true
